--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
           <div id="board8" class="board-space"></div>
         </div>
       </div>
+      <button id="restart">Restart</button>
+      <div class="modal"></div>
     </div>
   </body>
   <script src="index.js"></script>
